# alpha-shoop

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  get_shopify_token.py  litellm_config.yaml  mcp_server.py  pyproject.toml  requirements.txt  run.sh  shopify.app.toml  test_mcp_tools.py
.claude/commands/: status.md
.github/workflows/: ci.yml  deploy.yml  storefront-theme.yml
docs/: architecture.drawio  architecture.md  prompt.md  update.architecture.drawio
docs-app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
docs-app/public/: mcp.mmd
docs-app/src/: App.tsx  index.css
platform-app/: index.html  package-lock.json  package.json  vite.config.ts
platform-app/public/: architecture.drawio
platform-app/src/: App.tsx
scripts/: fetch-gcp-secrets.sh
src/: budget.py  config.py  main.py
src/agents/: director.py  graph.py  orchestrator.py  pricing.py  state.py
src/api/: deps.py
src/db/: engine.py  models.py
src/embeddings/: __init__.py
src/guardrails/: kill_switch.py  validator.py
src/llm/: __init__.py  client.py
src/mcp_tools/: ads.py  cj_connect.py  cloudflare.py  design_files.py  finance.py  fulfillment.py  market.py  meta_ads.py  monitoring.py  paypal.py  server.py  (+9 more)
tests/: conftest.py  test_agents.py  test_announcement_bar.py  test_director.py  test_guardrails.py  test_health.py  test_initial_state.py  test_mcp_tools.py  test_orchestrator.py  test_org.py  test_shopify_creds.py  test_stores.py  test_webhooks.py
(+115 files in other folders)
